updated page except footer

--- a/DC_Blog/index.html
+++ b/DC_Blog/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,32 +9,61 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-
 <body>
     <header>
         <div class="headerLeft">
-        <img src="img/logo.png" alt="DCLogo">
-        <h1>DigitalCrafts Blog</h1>
+            <img src="img/logo.png" alt="DCLogo">
+            <h1>DigitalCrafts Blog</h1>
         </div>
         <div class="headerRight">
-        <ul class="links">
-            <li><a href="">All Posts</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Follow</a></li>
-        </ul>
-    </div>
+            <ul class="links">
+                <li><a href="">All Posts</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Follow</a></li>
+            </ul>
+        </div>
     </header>
-    
+
     <main>
-        <div>
+        <div class="titleBlock">
             <h2 class="title">
             Fake it 'til you Make it:<br>
             A Developer's Story
         </h2>
-        <h3 class="date">
-            AUGUST 23, 2017
+            <h3 class="date">
+            AUGUST 28, 2017
         </h3>
-        <a href="" class="follow">Follow @DigitalCrafts</a>
+            <a href="" class="follow">
+            Follow @DigitalCrafts
+        </a>
+        </div>
+
+        <div class="mainPage">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Interdum posuere lorem ipsum dolor sit amet consectetur adipiscing. Metus aliquam eleifend mi in nulla posuere sollicitudin aliquam ultrices. Elementum pulvinar etiam non quam lacus suspendisse faucibus interdum. Mi eget mauris pharetra et ultrices. Adipiscing at in tellus integer. Egestas congue quisque egestas diam in arcu. Erat nam at lectus urna duis convallis. Rhoncus urna neque viverra justo nec ultrices dui sapien eget. Orci a scelerisque purus semper eget duis at. Mi sit amet mauris commodo. Ornare arcu odio ut sem. Dis parturient montes nascetur ridiculus mus mauris vitae ultricies. Faucibus nisl tincidunt eget nullam non nisi est. Mauris augue neque gravida in. Lobortis feugiat vivamus at augue eget arcu dictum varius. Accumsan lacus vel facilisis volutpat est velit egestas dui. Auctor elit sed vulputate mi sit amet mauris commodo quis. Lacinia quis vel eros donec.
+            </p>
+            <p>
+                Orci a scelerisque purus semper. Massa placerat duis ultricies lacus sed turpis. Tempor id eu nisl nunc mi ipsum faucibus vitae. Nullam vehicula ipsum a arcu cursus vitae congue mauris rhoncus. Interdum consectetur libero id faucibus nisl tincidunt eget nullam. Nascetur ridiculus mus mauris vitae ultricies leo. Dolor morbi non arcu risus quis varius quam quisque. Blandit turpis cursus in hac habitasse. Cursus vitae congue mauris rhoncus aenean vel. Amet mauris commodo quis imperdiet. Nulla facilisi etiam dignissim diam quis. Donec ac odio tempor orci. In fermentum posuere urna nec tincidunt praesent. Quam id leo in vitae turpis massa. Commodo viverra maecenas accumsan lacus vel facilisis volutpat est. Sit amet est placerat in. Volutpat ac tincidunt vitae semper quis. Eleifend mi in nulla posuere sollicitudin aliquam ultrices. Pulvinar proin gravida hendrerit lectus a.
+            </p>
+
+            <p>
+                A diam maecenas sed enim ut. Morbi tristique senectus et netus et malesuada fames. Nibh venenatis cras sed felis. Velit aliquet sagittis id consectetur purus ut. Ut tellus elementum sagittis vitae et leo. Nibh cras pulvinar mattis nunc sed blandit libero volutpat sed. Gravida dictum fusce ut placerat orci nulla pellentesque dignissim enim. Mi sit amet mauris commodo quis imperdiet massa. Mi proin sed libero enim sed faucibus turpis in eu. Elementum facilisis leo vel fringilla est ullamcorper. Libero volutpat sed cras ornare arcu. Diam donec adipiscing tristique risus nec feugiat in. Nec ultrices dui sapien eget mi proin.
+            </p>
+
+            <p>
+                Malesuada fames ac turpis egestas. Sit amet mattis vulputate enim nulla. Suspendisse in est ante in. Eget nunc scelerisque viverra mauris in aliquam sem. Morbi enim nunc faucibus a pellentesque. Pellentesque adipiscing commodo elit at imperdiet dui accumsan sit amet. Tortor at risus viverra adipiscing at in tellus integer. Mauris sit amet massa vitae tortor condimentum lacinia. Quisque sagittis purus sit amet volutpat. Tempus urna et pharetra pharetra massa massa ultricies. Ornare aenean euismod elementum nisi quis eleifend quam adipiscing. Ac placerat vestibulum lectus mauris ultrices eros in cursus turpis.
+            </p>
+
+            <p>
+                Amet luctus venenatis lectus magna fringilla. Feugiat nibh sed pulvinar proin gravida hendrerit lectus. In est ante in nibh mauris cursus mattis molestie. Aliquam nulla facilisi cras fermentum odio eu feugiat pretium nibh. Eget felis eget nunc lobortis mattis. Mattis nunc sed blandit libero volutpat sed cras ornare arcu. Sociis natoque penatibus et magnis. Fusce ut placerat orci nulla pellentesque dignissim enim sit. Mi bibendum neque egestas congue quisque egestas diam. Morbi leo urna molestie at elementum eu facilisis. Sed cras ornare arcu dui vivamus. Quis imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. A erat nam at lectus. Id ornare arcu odio ut sem. Mus mauris vitae ultricies leo integer. Eros donec ac odio tempor orci dapibus ultrices in.
+            </p>
+        </div>
+        <div class="pageNav">
+            <ul class="nav">
+                <li><a href="">Subscribe</a></li>
+                <li><a href="">Previous</a></li>
+                <li><a href="">Next</a></li>
+            </ul>
         </div>
     </main>
     <footer>
