--- a/DC_Blog/index.html
+++ b/DC_Blog/index.html
@@ -58,17 +58,23 @@
                 Amet luctus venenatis lectus magna fringilla. Feugiat nibh sed pulvinar proin gravida hendrerit lectus. In est ante in nibh mauris cursus mattis molestie. Aliquam nulla facilisi cras fermentum odio eu feugiat pretium nibh. Eget felis eget nunc lobortis mattis. Mattis nunc sed blandit libero volutpat sed cras ornare arcu. Sociis natoque penatibus et magnis. Fusce ut placerat orci nulla pellentesque dignissim enim sit. Mi bibendum neque egestas congue quisque egestas diam. Morbi leo urna molestie at elementum eu facilisis. Sed cras ornare arcu dui vivamus. Quis imperdiet massa tincidunt nunc pulvinar sapien et ligula ullamcorper. A erat nam at lectus. Id ornare arcu odio ut sem. Mus mauris vitae ultricies leo integer. Eros donec ac odio tempor orci dapibus ultrices in.
             </p>
         </div>
-        <div class="pageNav">
-            <ul class="nav">
-                <li><a href="">Subscribe</a></li>
-                <li><a href="">Previous</a></li>
-                <li><a href="">Next</a></li>
-            </ul>
-        </div>
     </main>
     <footer>
-
-    </footer>
+            <div class="pageNav">
+                    <ul class="nav">
+                        <li><a href="">Subscribe</a></li>
+                        <li><a href="">Previous</a></li>
+                        <li><a href="">Next</a></li>
+                    </ul>
+                </div>
+    
+                <div class="copyright">
+                        <p>
+                                ©2017 DigitalCrafts, Inc.
+                        </p>
+                    </div>
+    
+            </footer>
 
 </body>
 
